# lightning-haskell

./: .gitignore  .travis.yml  LICENSE  README.md  hi.html  lightning-haskell.cabal  stack.yaml
scripts/: hackage-docs.sh
src/Web/: Lightning.hs
src/Web/Lightning/: Actions.hs  Plots.hs  Render.hs  Routes.hs  Session.hs  Types.hs  Utilities.hs
src/Web/Lightning/Plots/: Adjacency.hs  Circle.hs  Force.hs  Graph.hs  GraphBundled.hs  Histogram.hs  Line.hs  LineStream.hs  Map.hs  Matrix.hs  Scatter.hs  Scatter3.hs  ScatterLine.hs  ScatterStream.hs  Volume.hs
src/Web/Lightning/Types/: Error.hs  Lightning.hs  Line.hs  Session.hs  Visualization.hs
test-integration/: ConfigLightning.hs
test-integration/Web/Lightning/: PlotSpec.hs
test/Web/: LightningSpec.hs
test/Web/Lightning/: UtilitySpec.hs
test/Web/Lightning/Types/: PlotsSpec.hs
