name:                lightning-haskell
version:             0.1.0.0
synopsis:            Haskell client for lightning-viz REST API
description:         Please see README.md
homepage:            https://github.com/cmoresid/lightning-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Connor Moreside
maintainer:          connor@moresi.de
copyright:           2016 Connor Moreside
stability:           experimental
category:            Web, Visualization
tested-with:         GHC == 7.10.3, GHC == 8.0.1
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Lightning
                     , Web.Lightning.Session
                     , Web.Lightning.Plots
                     , Web.Lightning.Render
                     , Web.Lightning.Types
                     , Web.Lightning.Types.Lightning
                     , Web.Lightning.Types.Error
                     , Web.Lightning.Types.Visualization
                     , Web.Lightning.Utilities
  other-modules:       Web.Lightning.Routes
                     , Web.Lightning.Plots.Line
                     , Web.Lightning.Plots.Force
                     , Web.Lightning.Plots.Scatter
                     , Web.Lightning.Plots.Matrix
                     , Web.Lightning.Plots.Adjacency
                     , Web.Lightning.Plots.Map
                     , Web.Lightning.Plots.Circle
                     , Web.Lightning.Plots.Histogram
                     , Web.Lightning.Plots.Graph
                     , Web.Lightning.Plots.GraphBundled
                     , Web.Lightning.Plots.Scatter3
                     , Web.Lightning.Types.Session
                     , Web.Lightning.Plots.LineStream
                     , Web.Lightning.Plots.ScatterStream
                     , Web.Lightning.Plots.Volume
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , data-default-class
                     , free
                     , mtl
                     , http-client
                     , http-client-tls
                     , http-types
                     , network
                     , text
                     , transformers
                     , api-builder
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lightning-haskell
                     , aeson
                     , api-builder
                     , bytestring
                     , hspec
                     , text
                     , transformers
  other-modules:       Web.LightningSpec
                     , Web.Lightning.Types.PlotsSpec
                     , Web.Lightning.UtilitySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-integration
  main-is:             Spec.hs
  build-depends:       base
                     , lightning-haskell
                     , aeson
                     , http-client
                     , http-client-tls
                     , http-types
                     , network
                     , api-builder
                     , bytestring
                     , hspec
                     , text
                     , transformers
  other-modules:       ConfigLightning
                     , Web.Lightning.PlotSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmoresid/lightning-haskell
